k3s/services/prometheus/ingress.yml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.homelab.kevin.lutzer.ca
    secretName: prometheus-homelab-kevin-lutzer-ca-tls
  rules:
  - host: prometheus.homelab.kevin.lutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus
              port:
                number: 80
